Actually final updated files :)

--- a/lostS1E1.html
+++ b/lostS1E1.html
@@ -646,12 +646,10 @@ textarea.form-control {
 		
         </div>
         <div class="navbar-collapse collapse">
-			<li class="active"><a href="home.html">Teletalk</a>
-			</li>
             <ul class="nav navbar-nav navbar-right">
 				
 				
-                <li class="active"><a href="profile.html">Profile</a>
+                <li><a href="profile.html">Profile</a>
                 </li>
                 <li><a href="shows.html">Shows</a>
                 </li>
@@ -698,9 +696,8 @@ textarea.form-control {
 <div class="row" id="user-profile">
 <div class="col-lg-3 col-md-4 col-sm-4">
 <div class="main-box clearfix">
-<h2>Lost</h2>
-<h4>Season 1 : Episode 1</h4>
-<h4>Pilot - Part 1</h4>
+<a href="lost.html"><h1>Lost</h1></a>
+<h2>Pilot - Part 1</h2>
 
 <img src="pilot.jpg" alt="" class="profile-img img-responsive center-block">
 <div class="profile-label">
@@ -768,7 +765,7 @@ Jack Shephard awakens disoriented in a jungle, and follows a yellow Labrador ret
 <i class="fa fa-star-o"></i>
 </td>
 <td>
-<a href="lostS1E1.html">John Doe</a> rated this episode
+<a href="profile.html">John Doe</a> rated this episode
 </td>
 <td>
 September 22, 2014
@@ -783,7 +780,7 @@ September 22, 2014
     <i class="fa fa-star"></i>
 </td>
 <td>
-    <a href="#">Jane Smith</a> rated this episode
+    <a href="profile2.html">Jane Smith</a> rated this episode
 </td>
 <td>
     September 29, 2004
@@ -842,7 +839,7 @@ September 22, 2014
     </li>
     <li class="col-md-6">
     <div class="img">
-    <img src="userProf3.png" class="img-responsive" alt="">
+    <img src="Naveen.jpg" class="img-responsive" alt="">
     </div>
     <div class="details">
     <div class="name">
@@ -858,7 +855,7 @@ September 22, 2014
     </li>
     <li class="col-md-6">
     <div class="img">
-    <img src="userProf4.png" class="img-responsive" alt="">
+    <img src="maggie.jpg" class="img-responsive" alt="">
     </div>
     <div class="details">
     <div class="name">
@@ -884,7 +881,7 @@ September 22, 2014
 </div>
 <div class="conversation-body">
 <div class="name">
-John Doe
+<a href="profile.html">John Doe </a>
 </div>
 <div class="time hidden-xs">
 September 22, 2013 18:28
@@ -901,7 +898,7 @@ If you like Lost, add me as a friend!
 </div>
 <div class="conversation-body">
 <div class="name">
-Jane Smith
+    <a href="profile2.html">Jane Smith </a>
 </div>
 <div class="time hidden-xs">
 September 22, 2013 12:45
@@ -917,7 +914,7 @@ Just added you :)
 </div>
 <div class="conversation-body">
 <div class="name">
-Jane Smith
+    <a href="profile2.html">Jane Smith </a>
 </div>
 <div class="time hidden-xs">
 September 22, 2013 12:45
