--- a/matthewFox.html
+++ b/matthewFox.html
@@ -651,7 +651,7 @@ textarea.form-control {
             <ul class="nav navbar-nav navbar-right">
 				
 				
-                <li class="active"><a href="profile.html">Profile</a>
+                <li><a href="profile.html">Profile</a>
                 </li>
                 <li><a href="shows.html">Shows</a>
                 </li>
@@ -783,7 +783,7 @@ Award nominations. Fox has also performed in ten feature films, including We Are
 <div class="col-sm-4 profile-social">
 <ul class="fa-ul">
 <li><i class="fa-li fa fa-twitter-square"></i><a href="#">@MattFox</a></li>
-<li><i class="fa-li fa fa-instagram"></i><a href="#">@MattFox1</a></li>
+<li><i class="fa-li fa fa-instagram"></i><a href="https://www.instagram.com/matthewcfox/?hl=en">@MatthewCFox</a></li>
 </ul>
 </div>
 </div>
