--- a/profile.html
+++ b/profile.html
@@ -647,8 +647,7 @@ textarea.form-control {
 		
         </div>
         <div class="navbar-collapse collapse">
-			<li class="active"><a href="home.html">Teletalk</a>
-			</li>
+
             <ul class="nav navbar-nav navbar-right">
 				
 				
@@ -717,7 +716,7 @@ textarea.form-control {
 <i class="fa fa-star"></i>
 <i class="fa fa-star"></i>
 <i class="fa fa-star-o"></i>
-<span>Average Episode Rating</span>
+<span>Average Rating Given</span>
 </div>
 <div class="profile-since">
 Member since: Jan 2012
@@ -728,6 +727,9 @@ Member since: Jan 2012
 <li><i class="fa-li fa fa-thumbs-o-up"></i>Shows Logged: <span>145</span></li>
 <li><i class="fa-li fa fa-check"></i>Shows Finished: <span>91</span></li>
 </ul>
+</div>
+<div>
+<a href="watchlist.html"><span class="label label-info">Watchlist</span></a>
 </div>
 <div class="profile-message-btn center-block text-center">
 
@@ -943,7 +945,7 @@ John Doe
 September 21, 2013 18:28
 </div>
 <div class="text">
-I can't believe I have never seen <a href="#">Lost</a> before today!
+I can't believe I have never seen <a href="lost.html">Lost</a> before today!
 </div>
 </div>
 </div>
