--- a/profile2.html
+++ b/profile2.html
@@ -646,8 +646,7 @@ textarea.form-control {
 		
         </div>
         <div class="navbar-collapse collapse">
-			<li class="active"><a href="home.html">Teletalk</a>
-			</li>
+
             <ul class="nav navbar-nav navbar-right">
 				
 				
@@ -712,7 +711,7 @@ textarea.form-control {
 <i class="fa fa-star"></i>
 <i class="fa fa-star-o"></i>
 <i class="fa fa-star-o"></i>
-<span>Average Episode Rating</span>
+<span>Average Rating Given</span>
 </div>
 <div class="profile-since">
 Member since: Dec 2015
@@ -728,9 +727,13 @@ Member since: Dec 2015
 <a href="#" class="btn btn-success">
 <i class="fa fa-envelope"></i> Send message
 </a>
+<div>
+    <a href="watchlist.html"><span class="label label-info">Watchlist</span></a>
+    </div>
 </div>
 </div>
 </div>
+
 <div class="col-lg-9 col-md-8 col-sm-8">
 <div class="main-box clearfix">
 <div class="profile-header">
@@ -939,7 +942,7 @@ John Doe
 September 22, 2013 18:28
 </div>
 <div class="text">
-I finally watched the next episode of <a href="#">Lost</a> before today!
+I finally watched the next episode of <a href="lost.html">Lost</a> before today!
 </div>
 </div>
 </div>
