--- a/shows.html
+++ b/shows.html
@@ -647,14 +647,13 @@ textarea.form-control {
 		
         </div>
         <div class="navbar-collapse collapse">
-			<li class="active"><a href="home.html">Teletalk</a>
-			</li>
+
             <ul class="nav navbar-nav navbar-right">
 				
 				
-                <li class="active"><a href="profile.html">Profile</a>
+                <li ><a href="profile.html">Profile</a>
                 </li>
-                <li><a href="shows.html">Shows</a>
+                <li class="active"><a href="shows.html">Shows</a>
                 </li>
                 <li><a href="watchlist.html">Watchlist</a>
                 </li>
@@ -737,17 +736,18 @@ Member since: Jan 2012
 <div class="col-lg-9 col-md-8 col-sm-8">
 <div class="main-box clearfix">
 <div class="profile-header">
-
+<h2>Genres</h2>
 <div class="tabs-wrapper profile-tabs">
 <ul class="nav nav-tabs">
 <li class="active"><a href="#tab-activity" data-toggle="tab">Dramas</a></li>
 <li><a href="#tab-friends" data-toggle="tab">Anime</a></li>
 <li><a href="#tab-chat" data-toggle="tab">Comedies</a></li>
 </ul>
+
 <div class="tab-content">
 <div class="tab-pane fade in active" id="tab-activity">
 <div class="table-responsive">
-	
+
 <table class="table">
 <tbody>
 <tr>
@@ -763,7 +763,7 @@ Member since: Jan 2012
 </tr>
 <tr>
 <td class="text-center">
-    <img src="./dramas/gg.jpg" height="40">
+    <img src="gg.jpg" height="40">
 </td>
 <td>
     <a href="#">Gossip Girl</a>
@@ -774,20 +774,20 @@ Member since: Jan 2012
  </tr>
 <tr>
 <td class="text-center">
-    <img src="./dramas/breaking.jpg" height="40">
+    <img src="breaking.jpg" height="40">
 </td>
 <td>
-    <a href="lost.html">Breaking Bad</a>
+    <a href="#">Breaking Bad</a>
 <td>
 ( 2008 )
 </td>
 </tr>
 <tr>
 <td class="text-center">
-    <img src="./dramas/euphoria.jpg" height="40">
+    <img src="euphoria.jpg" height="40">
 </td>
 <td>
-<a href="lost.html">Euphoria</a>
+<a href="#">Euphoria</a>
 </td>
 <td>
 ( 2019 )
@@ -795,10 +795,10 @@ Member since: Jan 2012
 </tr>
 <tr>
 <td class="text-center">
-    <img src="./dramas/succession.jpg" height="40">
+    <img src="succession.jpg" height="40">
 </td>
 <td>
-    <a href="lost.html">Succession</a>
+    <a href="#">Succession</a>
 </td>
 <td>
 ( 2018 )
